--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -43,7 +43,7 @@ setw -g mode-keys vi
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
 
-set-option -g mode-mouse on
+set-option -g mouse on
 set-option -s set-clipboard on
 
 # source the colors from tmuxline (copying theme from airline in vim
