--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -49,3 +49,9 @@ set-option -s set-clipboard on
 # source the colors from tmuxline (copying theme from airline in vim
 if-shell "test -f ~/.tmux/.tmux.line" "source ~/.tmux/.tmux.line"
 
+# status bar stuff
+
+#set -g status-right '#cd ${pane_current_path}; git rev-parse --abbrev-ref HEAD)'
+
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
+
